--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="https://www.facebook.com/Adesola1093" target="_blank">
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="https://www.twitter.com/360sol/" target="_blank">
+      <a href="https://www.twitter.com/360sol_/" target="_blank">
         <i class="fab fa-twitter"></i>
       </a>
       <a href="https://github.com/aoadesola" target="_blank">
